--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "uuid": "^8.3.2",
     "ws": "^8.7.0"
   },
   "devDependencies": {
